GPII-151: Updated to the master branch of infusion
Updated the instance of infusion to the latest version from the fluid-project/infusion repo's master branch.This includes the changes for FLUID-4907.

--- a/src/shared/lib/infusion/components/uiOptions/css/fss/fss-theme-bw-uio.css
+++ b/src/shared/lib/infusion/components/uiOptions/css/fss/fss-theme-bw-uio.css
@@ -85,7 +85,7 @@
 .fl-theme-uio-bw .fl-focus:focus, .fl-theme-uio-bw .fl-focus :focus, .fl-theme-uio-bw.fl-focus :focus, .fl-theme-uio-bw .selectable, .fl-theme-uio-wb .fl-inverted-color .fl-focus:focus, .fl-theme-uio-wb .fl-inverted-color .fl-focus :focus, .fl-theme-uio-wb.fl-inverted-color.fl-focus :focus, .fl-theme-uio-wb .fl-inverted-color .selectable {
   outline-width: 0.2em;
   outline-style: solid;
-  outline-color: #00AAFF;
+  outline-color: #000;
 }
 .fl-theme-uio-bw .fl-knockout, .fl-theme-uio-wb .fl-inverted-color .fl-knockout {
   background-color: transparent !important;
