--- a/src/shared/lib/infusion/components/uiOptions/css/fss/fss-theme-by-uio.css
+++ b/src/shared/lib/infusion/components/uiOptions/css/fss/fss-theme-by-uio.css
@@ -85,7 +85,7 @@
 .fl-theme-uio-by .fl-focus:focus, .fl-theme-uio-by .fl-focus :focus, .fl-theme-uio-by.fl-focus :focus, .fl-theme-uio-by .selectable, .fl-theme-uio-yb .fl-inverted-color .fl-focus:focus, .fl-theme-uio-yb .fl-inverted-color .fl-focus :focus, .fl-theme-uio-yb.fl-inverted-color.fl-focus :focus, .fl-theme-uio-yb .fl-inverted-color .selectable {
   outline-width: 0.2em;
   outline-style: solid;
-  outline-color: #00AAFF;
+  outline-color: #000;
 }
 .fl-theme-uio-by .fl-knockout, .fl-theme-uio-yb .fl-inverted-color .fl-knockout {
   background-color: transparent !important;
