--- a/src/shared/lib/infusion/components/uiOptions/css/fss/fss-theme-dglg-uio.css
+++ b/src/shared/lib/infusion/components/uiOptions/css/fss/fss-theme-dglg-uio.css
@@ -91,7 +91,7 @@
 .fl-theme-uio-dglg .fl-focus:focus, .fl-theme-uio-dglg .fl-focus :focus, .fl-theme-uio-dglg.fl-focus :focus, .fl-theme-uio-dglg .selectable, .fl-theme-uio-lgdg .fl-inverted-color .fl-focus:focus, .fl-theme-uio-lgdg .fl-inverted-color .fl-focus :focus, .fl-theme-uio-lgdg.fl-inverted-color.fl-focus :focus, .fl-theme-uio-lgdg .fl-inverted-color .selectable {
   outline-width: 0.2em;
   outline-style: solid;
-  outline-color: #00AAFF;
+  outline-color: #555555;
 }
 .fl-theme-uio-dglg .fl-knockout, .fl-theme-uio-lgdg .fl-inverted-color .fl-knockout {
   background-color: transparent !important;
