GPII-133: Fixed positioning of discovery tool icons so it looks better in IE.

--- a/src/discoveryTool/css/DiscoveryTool.css
+++ b/src/discoveryTool/css/DiscoveryTool.css
@@ -164,15 +164,12 @@
 }
 
 .fl-discoveryTool-panel-icon:before{
-	position:relative;
-	left: 0.1em;
 	color: #fff;
 }
 
 .fl-discoveryTool-panel-icon:after{
 	color: #333;
-	position: relative;
-	left: -0.9em;
+	margin-left: -1em;
 }
 
 /* Preference Set Icons */
