GPII-173: Removes space at bottom of iframe for win browsers

--- a/demos/discoveryTool/demo.css
+++ b/demos/discoveryTool/demo.css
@@ -255,6 +255,7 @@ article h2 {
 .fl-uiOptions-discoveryTool iframe {
     width: 100%;
     border: none;
+    margin-bottom: -0.5em; /* For GPII-173 */
 }
 
 .fl-header-title {
