--- a/demos/discoveryTool/demo.css
+++ b/demos/discoveryTool/demo.css
@@ -237,6 +237,7 @@ article h2 {
     text-align: right;
     background-color: #6f7b80;
     padding: 0.2em 1em;
+    line-height: 1.3;
 }
 .fl-panelBar button {
     background-color: #6f7b80;
@@ -250,12 +251,12 @@ article h2 {
     position: fixed;
     bottom: 0;
     width: 100%;    
+    line-height: 0; /* For GPII-173 */   
 }
 
 .fl-uiOptions-discoveryTool iframe {
     width: 100%;
     border: none;
-    margin-bottom: -15px; /* For GPII-173 */
 }
 
 .fl-header-title {
