--- a/src/shared/adjusters/css/style.css
+++ b/src/shared/adjusters/css/style.css
@@ -1,5 +1,7 @@
 .preference {
     margin-left: 45px;
+    /*font-family: 'Roboto Slab', serif;*/
+    font-family: 'Open Sans', sans-serif;
 }
 
 .gpii-punctuationVerbosity-description {
@@ -10,25 +12,27 @@
     font-size: 15px;
 }
 
+#surrounding-div {
+    border: 3px solid black;
+    width: 700px;
+    position: relative;
+    text-align: left;
+}
+
 #prompt-message {
     display:none;
     background: url('../images/balloon-empty.png') no-repeat;
+    text-align: center;
     height: 25px;
-    width: 200px;
-    background-size:200px 25px;
+    width: auto;
+    padding-left: 6px;
+    padding-right: 6px;
+    background-size: 100% 100%;
     position: fixed;
     top: 55px;
-    margin-left: 238px;
+    margin-left: 262px;
     cursor: pointer;
-    text-align: center;
 }
-/*
-#prompt-message-label {
-    color:black;
-    font-size:12px;
-    font-weight:bold;
-    border: 1px solid #888;
-}*/
 
 .gpii-addOrRemovePreference-label {
     display: none;
@@ -59,7 +63,7 @@ textarea:focus, input:focus{
     outline: 0;
 }
 
-#more-options {
+.more-options {
     cursor:pointer;
     display: none;
     font-size: 15px;
@@ -92,6 +96,69 @@ textarea:focus, input:focus{
     margin-left:125px;
 }
 
+input[type="radio"] {
+    display:none;
+}
+
+input[type="radio"] + label.radioButton-left {
+    background: url('../images/radioButton-leftOff.png') no-repeat;
+    width: auto;
+    height: auto;
+    position: absolute;
+    font-size: 15px;
+    line-height: 30px;
+    padding-top: 25px;
+    padding-right: 40px;
+    vertical-align: center;
+}
+
+input[type="radio"]:checked + label.radioButton-left {
+    background: url('../images/radioButton-leftOn.png') no-repeat;
+}
+
+input[type="radio"] + label.radioButton-middle {
+    background: url('../images/radioButton-middleOff.png') no-repeat;
+    width: auto;
+    height: auto;
+    position: relative;
+    display:inline-block;
+    font-size: 15px;
+    padding-top: 31px;
+    padding-right: 10px;
+    padding-left: 10px;
+}
+
+input[type="radio"] + label.radioButton-second {
+    margin-left: 40px;
+}
+
+input[type="radio"] + label.radioButton-third {
+    padding-left: 15px;
+    margin-left: -5px;
+}
+
+input[type="radio"]:checked + label.radioButton-middle {
+    background: url('../images/radioButton-middleOn.png') no-repeat;
+}
+
+input[type="radio"] + label.radioButton-right {
+    background: url('../images/radioButton-rightOff.png') no-repeat;
+    width: auto;
+    height: auto;
+    position: absolute;
+    font-size: 15px;
+    display:inline-block;
+    line-height: 30px;
+    padding-top: 25px;
+    padding-right: 29px;
+    padding-left: 22px;
+    vertical-align: center;
+}
+
+input[type="radio"]:checked + label.radioButton-right {
+    background: url('../images/radioButton-rightOn.png') no-repeat;
+}
+
 select {
     padding:4px;
     margin: 0;
@@ -112,7 +179,6 @@ select {
     appearance:none;
     cursor:pointer;
 }
-
 
 html{
     background:#ECEFEF;
@@ -186,9 +252,13 @@ input[type=checkbox] + label.checkbox-label {
     cursor:pointer;
     font-size: 15px;
     display:inline-block;
-    line-height:25px;
+    line-height:24px;
     width: 250px;
     vertical-align: center;
+}
+
+input[type=checkbox] + label.long-lined-label {
+    line-height: 20px;
 }
 
 input[type=checkbox]:checked + label.checkbox-label {
@@ -203,50 +273,105 @@ body {
     -webkit-user-select: none;
 }
 
+.fl-uiOptions .fl-uiOptions-onoff .fl-uiOptions-switch {
+    border-radius:50px;
+    border: 1px solid #D7DCDD;
+    width: 5em;
+    height: 2em;
+    background-color: #FFFFFF;
+    box-shadow: 1em 1.1em 0 0 rgba(250,250,250,0.53) inset;
+    overflow:hidden;
+    vertical-align: middle;
+    display:inline-block;
+    transition-duration: 0.2s;
+    transition-property: padding-left, width, background-color, margin-left;
+    font-size: 1.1em;
+    font-weight: 700;
+}
 
-.onoffswitch {
-    position: relative; width: 90px;
-    -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
+.fl-uiOptions .fl-uiOptions-onoff input {
+    border: 0 none;
+    clip: rect(0px, 0px, 0px, 0px);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
 }
-.onoffswitch-checkbox {
-    display: none;
+
+.fl-uiOptions .fl-uiOptions-onoff input:focus + label {
+    outline: 1px solid black;
 }
-.onoffswitch-label {
-    display: block; overflow: hidden; cursor: pointer;
-    border: 2px solid #999999; border-radius: 20px;
+
+.fl-uiOptions .fl-uiOptions-onoff input:checked + label .fl-uiOptions-switch {
+    padding-left: 3em;
+    width: 2em;
+    background-color: rgb(23, 169, 184);
+    box-shadow: -1em 1.1em 0.1em 0 rgba(172, 216, 92, 0.00) inset;
 }
-.onoffswitch-inner {
-    width: 50%; margin-left: -100%;
-    -moz-transition: margin 0.3s ease-in 0s; -webkit-transition: margin 0.3s ease-in 0s;
-    -o-transition: margin 0.3s ease-in 0s; transition: margin 0.3s ease-in 0s;
+
+.fl-uiOptions .fl-uiOptions-onoff input + label [data-checkboxStateOn]:before {
+    content: attr(data-checkboxStateOn);
 }
-.onoffswitch-inner:before, .onoffswitch-inner:after {
-    float: left; width: 50%; height: 30px; padding: 0; line-height: 30px;
-    font-size: 14px; color: white; font-family: Trebuchet, Arial, sans-serif; font-weight: bold;
-    -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
+.fl-uiOptions .fl-uiOptions-onoff input + label [data-checkboxStateOff]:after {
+    content: attr(data-checkboxStateOff);
 }
-.onoffswitch-inner:before {
-    content: "ON";
-    padding-left: 10px;
-    background-color: #2FCCFF; color: #FFFFFF;
+
+.fl-uiOptions .fl-uiOptions-onoff input + label .fl-uiOptions-switch:before {
+    color: #fff;
+    border: 1px solid rgb(0, 55, 85);
+    border-radius: 150px;
+    float:left;
+    width:1.9em;
+    height: 1.9em; /* Width and height of the knob. */
+    text-indent:-2.07em;
+    line-height:1.9em;
+    text-shadow: 1px 1px 1px #000;
+    background-color: #fff;
+    background-image: -o-linear-gradient(bottom, rgb(205,204,202) 0%, rgb(244,244,244) 100%);
+    background-image: -moz-linear-gradient(bottom, rgb(205,204,202) 0%, rgb(244,244,244) 100%);
+    background-image: -webkit-linear-gradient(bottom, rgb(205,204,202) 0%, rgb(244,244,244) 100%);
+    background-image: -ms-linear-gradient(bottom, rgb(205,204,202) 0%, rgb(244,244,244) 100%);
+    background-image: -webkit-gradient(
+        linear,
+        left top,
+        left bottom,
+        color-stop(0, rgb(205,204,202)),
+        color-stop(1, rgb(244,244,244))
+    );
+    background-image: linear-gradient(bottom, rgb(205,204,202) 0%, rgb(244,244,244) 100%);
+    box-shadow: 0.1em 0.1em 0.0em #444;
 }
-.onoffswitch-inner:after {
-    content: "OFF";
-    padding-right: 10px;
-    background-color: #EEEEEE; color: #999999;
-    text-align: right;
+
+.fl-uiOptions .fl-uiOptions-onoff input + label .fl-uiOptions-switch:after {
+    float:left;
+    position:relative;
+    top: -0.76em;
+    left: 0.5em;
 }
-.onoffswitch-switch {
-    width: 18px; margin: 6px;
-    background: #FFFFFF;
-    border: 2px solid #999999; border-radius: 20px;
-    position: absolute; top: 0; bottom: 0; right: 56px;
-    -moz-transition: all 0.3s ease-in 0s; -webkit-transition: all 0.3s ease-in 0s;
-    -o-transition: all 0.3s ease-in 0s; transition: all 0.3s ease-in 0s;
+
+.fl-uiOptions .fl-uiOptions-onoff .fl-uiOptions-switch-inner {
+    border: 0.1px solid #493A30;
+    border-radius: 50px;
+    width: 0.9em;
+    height: 0.9em;
+    position:relative;
+    left:-1.45em;
+    top:0.52em;
+
+    background-color: #617796;
+    box-shadow: 0 -0.2em 0.3em 0.05em rgba(250, 250, 250, 0.3) inset;
+
+    display:inline-block;
 }
-.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
-    margin-left: 0;
+
+.fl-uiOptions .fl-uiOptions-onoff input:checked + label .fl-uiOptions-switch .fl-uiOptions-switch-inner {
+    top:-1.5em;
+    left: 0.56em;
 }
-.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
-    right: 0px;
+
+.fl-uiOptions label {
+    text-transform: none;
+    font-size: 1.2em;
 }
