--- a/src/shared/lib/infusion/components/uiOptions/html/UIOptionsTemplate-plusMinusNumerical.html
+++ b/src/shared/lib/infusion/components/uiOptions/html/UIOptionsTemplate-plusMinusNumerical.html
@@ -1,4 +1,11 @@
 <div class="flc-uiOptions-plus-minus-numerical">
+    <h2><label class="flc-uiOptions-plus-minus-numerical-label"></label></h2>
+    
+    <label class="flc-uiOptions-plus-minus-numerical-minus"></label>
+    <input type="text" class="flc-uiOptions-plus-minus-numerical-value fl-inputs"/>
+    <label class="flc-uiOptions-plus-minus-numerical-plus"></label>
+
+    <!-- 
     <h2><label class="flc-uiOptions-plus-minus-numerical-label" for="plus-minus-numerical"></label></h2>
     <div class="fl-inputs">
         <div class="fl-force-left">
@@ -6,4 +13,6 @@
         </div>
         <div class="fl-slider-input" style="display:none"><input id="plus-minus-numerical" class="flc-textfieldSlider-field" type="text" /> <span class="flc-uiOptions-multiplier"></span></div>
     </div>
+     -->
+    
 </div>
