--- a/src/shared/lib/infusion/components/uiOptions/html/UIOptionsTemplate-plusMinusNumerical.html
+++ b/src/shared/lib/infusion/components/uiOptions/html/UIOptionsTemplate-plusMinusNumerical.html
@@ -1,10 +1,11 @@
 <div class="flc-uiOptions-plus-minus-numerical">
     <h2><label class="flc-uiOptions-plus-minus-numerical-label"></label></h2>
     
-    <label class="flc-uiOptions-plus-minus-numerical-minus"></label>
-    <input type="text" class="flc-uiOptions-plus-minus-numerical-value fl-inputs"/>
-    <label class="flc-uiOptions-plus-minus-numerical-plus"></label>
-
+    <div class="flc-uiOptions-plus-minus-numerical-widget">
+	    <label class="flc-uiOptions-plus-minus-numerical-minus" for="textSizeValue"></label>
+	    <input type="text" class="flc-uiOptions-plus-minus-numerical-value fl-inputs" id="textSizeValue"/>
+	    <label class="flc-uiOptions-plus-minus-numerical-plus" for="textSizeValue"></label>
+	</div>
     <!-- 
     <h2><label class="flc-uiOptions-plus-minus-numerical-label" for="plus-minus-numerical"></label></h2>
     <div class="fl-inputs">
