GPII-171: Preferences scroll instead of wrap when screen is narrow

--- a/demos/discoveryTool/demo.css
+++ b/demos/discoveryTool/demo.css
@@ -252,9 +252,12 @@ article h2 {
     width: 100%;    
 }
 
-.fl-uiOptions-discoveryTool iframe {
-    width: 100%;
+.fl-uiOptions-discoveryTool .fl-uiOptions-fatPanel-iframe {
     border: none;
+}
+
+.fl-uiOptions-fatPanel-iframe html {
+    overflow: hidden;
 }
 
 .fl-header-title {
