--- a/src/discoveryTool/css/DiscoveryTool.css
+++ b/src/discoveryTool/css/DiscoveryTool.css
@@ -31,18 +31,21 @@
 
 .fl-uiOptions-discoveryTool {
     background-color: #6f7b80;
-    overflow: hidden;
+    overflow-y: hidden;
+    white-space: nowrap;
+    overflow-x: auto;    
 }
 
 .fl-uiOptions-discoveryTool .fl-uiOptions {
     font-family: 'OpenSans',"Myriad Pro", Helvetica, Arial, sans-serif;
-    padding-top: 2em;
+    padding-top: 1em;
 }
 
 /* Panels */
 .fl-uiOptions-discoveryTool .fl-uiOptions-panels {
-    text-align: center;
     margin: 0;
+    width: 100%;
+    text-align: center;        
 }
 
 .fl-uiOptions-discoveryTool .fl-uiOptions-panels li.fl-uiOptions-panel {
@@ -111,6 +114,8 @@
     width: 6.7em;
     height: 6.7em;
     border-radius: 0.4em;
+    margin-left: 1em;
+    white-space: normal;
 }
 
 .fl-uiOptions-discoveryTool .fl-uiOptions-panels li.fl-uiOptions-panel .fl-discoveryTool-try:hover {
@@ -250,3 +255,32 @@
 .fl-theme-bw .fl-uiOptions-panel input:focus ~ label .fl-icon-text,
 .fl-theme-lgdg .fl-uiOptions-panel label:hover .fl-icon-text,
 .fl-theme-lgdg .fl-uiOptions-panel input:focus ~ label .fl-icon-text  { text-shadow: none; }
+
+
+/* Responsive design: if narrow screen, preferences should scroll not wrap */
+
+/* Desktops and laptops
+@media only screen and (min-width: 60.05em) {
+
+    .fl-uiOptions-discoveryTool .fl-uiOptions-panels {
+        width: 100%;
+        text-align: center;        
+    }
+
+}
+
+@media only screen and (max-width: 60em) {
+
+    .fl-uiOptions-discoveryTool .flc-uiOptions-controls {
+        width: 100%;
+        overflow-x: auto;        
+    }
+    
+    .fl-uiOptions-discoveryTool .fl-uiOptions-panels {
+        width: 150%;
+    }
+
+    .fl-uiOptions-discoveryTool .fl-uiOptions-panels li.fl-uiOptions-panel {
+        text-align: center;
+    }
+} */
