--- a/src/shared/lib/infusion/components/uiOptions/html/UIOptionsTemplate-cursorSize.html
+++ b/src/shared/lib/infusion/components/uiOptions/html/UIOptionsTemplate-cursorSize.html
@@ -2,9 +2,9 @@
     <h2><!-- <span class="fl-icon-size"></span> --><label class="flc-uiOptions-cursor-size-label" for="cursor-size"></label></h2>
     <div class="fl-inputs">
         <div class="fl-force-left">
-            <div class="fl-icon-small-a" aria-label="Icon of a small capital letter 'A'" role="img"></div>
+            <div class="fl-icon-cursor-icons fl-icon-small-cursor" role="img"></div>
             <div class="flc-textfieldSlider-slider fl-force-left fl-slider fl-slider-horz"> </div>
-            <div class="fl-icon-big-a" aria-label="Icon of a large capital letter 'A'" role="img"></div>            
+            <div class="fl-icon-cursor-icons fl-icon-big-cursor" role="img"></div>            
         </div>
         <div class="fl-slider-input" style="display:none;"><input id="cursor-size" class="flc-textfieldSlider-field" type="text" /> <span class="flc-uiOptions-multiplier"></span></div>
     </div>
