--- a/src/pmt/css/PreferencesManagementTool.css
+++ b/src/pmt/css/PreferencesManagementTool.css
@@ -35,6 +35,7 @@
 .fl-uiOptions-category {
     width: 80%;
     margin: 0 auto;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .fl-uiOptions .fl-slider-horz {
@@ -57,6 +58,7 @@
 .headerImage {
 	position: relative; 
    	width: 100%; /* for IE 6 */
+   	font-family: 'Roboto Slab', serif;
 }
 
 .headerTitle {
